--- a/contact.html
+++ b/contact.html
@@ -13,6 +13,11 @@
   <a href="index.html">About</a> <a href="new-properties.html">New Properties</a> <a href="real-estate-listings.html">Listings</a> <a href="market-report.html">Market Report</a> <a href="contact.html">Contact</a> <a href="http://hud.gov" target="_blank">H.U.D.</a>
 
   <h3>Contact</h3>
+
+  <!-- Map -->
+  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d6049.704341357508!2d-73.99390314124759!3d40.699253298655925!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c25a2343ce7b2b%3A0x2526ddba7abd465c!2sBrooklyn+Bridge!5e0!3m2!1sen!2sus!4v1442682630475" width="425" height="350" frameborder="0" style="border:0" allowfullscreen></iframe>
+
+  <!-- Contact form -->
   
 </body>
 </html>
