add contact form

--- a/contact.html
+++ b/contact.html
@@ -19,5 +19,22 @@
 
   <!-- Contact form -->
   
+<form action="#" method="post">
+
+  <!-- for= allows you to click on a label and have the cursor show up in the associated input-->
+  <label for="fullname">Name</label>
+  <input type="text" id="fullname" name="fullname" placeholder="your name" required>
+  <label for="email">Email</label>
+  <input type="email" id="email" name="email" placeholder="your email" required>
+  <label for="phone">Phone</label>
+  <input type="tel" id="phone" name="phone" placeholder="your phone number (optional)">
+  <label for="message">Message</label>
+  <textarea name="message" id="message" cols="30" rows="10"></textarea>
+  <input type="submit" value="send">
+
+
+</form>
+
+
 </body>
 </html>
