--- a/contact.html
+++ b/contact.html
@@ -14,5 +14,12 @@
 
   <h3>Contact</h3>
   
+  <!-- Map -->
+
+	<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d12099.935432680877!2d-73.99532314999998!3d40.696353150000014!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sus!4v1443037855994" width="425" height="350" frameborder="0" style="border:0" allowfullscreen></iframe>
+
+  <!-- Contact fotm -->
+
+
 </body>
 </html>
