--- a/contact.html
+++ b/contact.html
@@ -18,6 +18,19 @@
 
 
   <! -- Contact Form -->
+  
+  <form action="#" method="post">
+    <label for="fullname">Name</label>
+    <input type="text" id="fullname" name="fullname" placeholder="Your Name" required>
+    <label for="email">Email</label>
+    <input type="email" id="email" name="email" placeholder="Your Email" required>
+    <label for="phone">Phone</label>
+    <input type="tel" id="phone" name="phone" placeholder="Your Phone">
+    <label for="message">Message</label> 
+    <textarea id="message" name="message" rows="10"></textarea>
+    <input type="submit" value="send">
+  </form>
+
 
   
 </body>
