--- a/contact.html
+++ b/contact.html
@@ -13,6 +13,11 @@
   <a href="index.html">About</a> <a href="new-properties.html">New Properties</a> <a href="real-estate-listings.html">Listings</a> <a href="market-report.html">Market Report</a> <a href="contact.html">Contact</a> <a href="http://hud.gov" target="_blank">H.U.D.</a>
 
   <h3>Contact</h3>
+  <!-- map -->
+	<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d6049.8007784003585!2d-73.99347779679563!3d40.69819140378405!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sus!4v1450099449681" width="425" height="350" frameborder="0" style="border:0" allowfullscreen></iframe>
+
+
+  <!-- contact form -->
   
 </body>
 </html>
