add contact form

--- a/contact.html
+++ b/contact.html
@@ -18,6 +18,18 @@
 
 
   <!-- contact form -->
+  <form action="#" method="post">
+	<label for="fullname">Name</label>
+	<input type="text" id="fullname" name="fullname" placeholder="your name" required>
+	<label for="email">Email</label>
+	<input type="email" id="email" name="email" placeholder="your email" required>
+	<label for="phone">Phone</label>
+	<input type="tel" id="phone" name="phone" placeholder="your phone (optional)">
+	<label for="message">Message</label>
+	<textarea id="message" placeholder="Leave a message (optional)" rows="10"></textarea>
+	<input type="submit" value="Send">
+
+  </form>
   
 </body>
 </html>
