--- a/index.html
+++ b/index.html
@@ -1,35 +1,71 @@
-<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE HTML>
+<html lang= "en">
   <head>
-    <!-- This is a comment. I can see it in the code, but it will not appear in the browser. -->
+    <!-- This is a comment. I can see it in the code, but it will not appear int he browse. -->
 
-    <!-- 
-    The head section contains info for search engines and the browser and is not seen by site visitors.
-    -->
-
-    <meta charset="UTF-8">
-    <title>Exceptional Realty Group - Luxury Homes - About</title>
+    <!-- the head section contains info for search enginies and the browser and is not seen by site visitors -->
+    <meta charset= "UTF-8">
+    <title>Exceptional Realty Group - Luxury Homes - About </title>
   </head>
   <body>
-    <!-- The body is the entire viewable area of the web page. For example we can see text, links, images, and media. -->
+    <!-- The body is the entire viewable area of the web page. For example we can see text links, images and media -->
+    <header>
+        <h1>Exceptional</h1>
+        <h2>Realty Group</h2>
 
-    <h1>Exceptional</h1>
-    <h2>Realty Group</h2>
+                                <!-- Links -->
+        <nav>
+            <a href="index.html">About</a>
+            <a href="new-properties.html">New Properties</a>
+            <a href="real-estate-listings.html">Listings</a>
+            <a href="market-report.html">Market Report</a>
+            <a href="contact.html">Contact</a>
+            <a href="http://www.hud.gov" target = "_blank">H.U.D.</a>
+        </nav>
+    </header>
 
-    <!-- links -->
-    <a href="index.html">About</a> <a href="new-properties.html">New Properties</a> <a href="real-estate-listings.html">Listings</a> <a href="market-report.html">Market Report</a> <a href="contact.html">Contact</a> <a href="http://hud.gov" target="_blank">H.U.D.</a>
+    <section id="featured-property">
+        <figure>    <!-- allows us to surround content with a box and make a caption with info about the img/vid -->
+            <img src="images/intro-pic.jpg" alt="Beautiful Living Room" title= "Welcome to Exceptional Realty ">
+            <figcaption> 345 Carl Stree, Apt 12, Carrol Rd. Brooklyn, NY - Photo by Denise Richards </figcaption>
+        </figure>
+        <!--
+        foldername/ = go inside the folder.
+        filename - use a filde int he current folder.
+        ../ = leave the current folder adn go up to the paretn folder
+         -->
 
-    <img src="images/intro-pic.jpg" alt="A beautiful living room." title="Welcome to Exceptional Realty Group">
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, <br> sed do eiusmod
+        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+        cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+        proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 
-    <!--
-    foldername/ = go inside the folder.
-    filename = use a file in the current folder.
-    ../ = leavethe current folder and go up to parent folder.
-    -->
 
-    <p>Lorem ipsum dolor sit amet,<br> consectetur adipisicing elit. Quae, perferendis nisi nihil debitis aspernatur doloribus quam eveniet quibusdam tempora esse! Repudiandae, assumenda, debitis doloribus ea eius ab at quae totam. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores, inventore aliquid ipsam debitis nulla vitae omnis nemo quisquam? Obcaecati dolor ipsum distinctio reprehenderit aliquid autem ea vel provident voluptas nisi.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+        cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+        proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+    </section>
 
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsa, natus, nobis, tempore recusandae culpa deleniti dignissimos laborum perspiciatis exercitationem obcaecati dolores unde eveniet eius debitis perferendis provident porro. Ipsum, placeat.</p>
+    <section id ="promotional">
+        <figure>
+                                <!--     PROMO VIDEO -->
+        <video controls > <!-- Controls make sure that the controls are visible to user -->
+            <source src="videos/Real Estate.mp4" type="video/mp4">
+            <source src="videos/Real Estate.ogv" type="video/ogv">
+<!--                 Your browser does not support HTML5 video. <a href="http://browsehappy.com">Please upgrade your browser.</a>
+ -->        </video>
+            <figcaption>Exceptional Realty Group Promotional Video - Sourc: archive.org</figcaption>
+        </figure>
+    </section>
+
+    <footer>
+        @copy; 2015 Exceptional Realty. All Rights Reserved.
+    </footer>
 
   </body>
 </html>
