--- a/real-estate-listings.html
+++ b/real-estate-listings.html
@@ -1,38 +1,49 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+<html>
 <head>
-  <meta charset="UTF-8">
-  <title>Exceptional Realty Group - Luxury Homes - Listings</title>
+  <meta charset= "UTF-8">
+    <title>Exceptional Realty Group - Luxury Homes - About </title>
 </head>
 <body>
+    <header>
+        <h1>Exceptional</h1>
+        <h2>Realty Group</h2>
 
-  <h1>Exceptional</h1>
-  <h2>Realty Group</h2>
-
-  <!-- links -->
-  <a href="index.html">About</a> <a href="new-properties.html">New Properties</a> <a href="real-estate-listings.html">Listings</a> <a href="market-report.html">Market Report</a> <a href="contact.html">Contact</a> <a href="http://hud.gov" target="_blank">H.U.D.</a>
+                                <!-- Links -->
+        <nav>
+            <a href="index.html">About</a>
+            <a href="new-properties.html">New Properties</a>
+            <a href="real-estate-listings.html">Listings</a>
+            <a href="market-report.html">Market Report</a>
+            <a href="contact.html">Contact</a>
+            <a href="http://www.hud.gov" target = "_blank">H.U.D.</a>
+        </nav>
+    </header>
 
   <h3>Property Archive</h3>
   <h4>2014</h4>
-  <!-- unordered list -->
+  <!-- Unordered list -->
   <ul>
     <li>Dec</li>
     <li>Nov</li>
-    <li>Oct
+    <li>oct
       <ul>
         <li>17th</li>
         <li>18th</li>
       </ul>
     </li>
   </ul>
-
   <h3>Popular Listings</h3>
-  <!-- ordered list -->
-  <ol>
-    <li>348 Stockton St.</li>
-    <li>3742A Belevadere Rd.</li>
-    <li>41 Cleaton Ave.</li>
-  </ol>
+    <!-- Unordered list -->
+    <ol>
+      <li>348 Stockton St.</li>
+      <li>3742a Belevadere Rd. </li>
+      <li>41 cleaton Ave. </li>
+    </ol>
+
+    <footer>
+        @copy; 2015 Exceptional Realty. All Rights Reserved.
+    </footer>
 
 </body>
 </html>
