deleted videos that were too data heavy and replaced with smaller videos

--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
     <!-- promo video -->
 
     <video controls>
-        <source src="videos/Real_Estate_512kb.mp4" type="video/mp4">
-        <source src="videos/Real_Estate_OGG.ogv" type="video/ogg">
+        <source src="videos/Esparza__Associates_Urban_Consulting.mp4" type="video/mp4">
+        <source src="videos/Esparza__Associates_Urban_Consulting.ogv" type="video/ogg">
         Your browser does not support HTML5 video. <a href="http://browsehappy.com" target="_blank">Please upgrade your browser</a>
     </video>
 
