--- a/contact.html
+++ b/contact.html
@@ -19,6 +19,18 @@
   <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d12100.154145193428!2d-74.00244712976676!3d40.695148925496696!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sus!4v1455554877770" width="425" height="350" frameborder="0" style="border:0" allowfullscreen></iframe>
 
   <!-- Contact Form -->
+
+   <form action="#" method="post">
+    <label for "fullname">Name</label>
+    <input type="text" id="fullname" name="fullname" placeholder="your name" required>
+    <label for "email">Email</label>
+    <input type="email" id="email" name="email" placeholder="your email" required>
+    <label for "phone">Phone</label>
+    <input type="tel" id="phone" name="phone" placeholder="your phone" required>
+    <label for "message">Message</label>
+    <textarea id ="message" name="message" rows="10"></textarea>
+    <input type="submit" value="send">
+   </form>
   
 </body>
 </html>
