--- a/contact.html
+++ b/contact.html
@@ -13,6 +13,20 @@
   <a href="index.html">About</a> <a href="new-properties.html">New Properties</a> <a href="real-estate-listings.html">Listings</a> <a href="market-report.html">Market Report</a> <a href="contact.html">Contact</a> <a href="http://hud.gov" target="_blank">H.U.D.</a>
 
   <h3>Contact</h3>
-  
+
+  <!-- Map -->
+	<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d6046.518347140326!2d-73.95640776923923!3d40.7343223059343!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sus!4v1455923610242" width="425" height="350" frameborder="0" style="border:0" allowfullscreen></iframe>
+  <!-- Contact Form -->
+  <form action="#" method="post">
+  		<label for="fullname">Name</label>
+  		<input type="text" id="fullname" name="fullname" placeholder="your name" required>
+  		<label for="email">Email</label>
+  		<input type="email" id="email" name="email" placeholder="your email" required>
+		<label for="phone">Phone</label>
+		<input type="tele" id="phone" name="phone" placeholder="xxx-xxx-xxxx">
+		<label for="message">Message</label>
+		<textarea name="message" id="message" cols="30" rows="10"></textarea>
+		<input type="submit" value="send">
+  	</form>
 </body>
 </html>
