--- a/index.html
+++ b/index.html
@@ -31,5 +31,11 @@
 
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsa, natus, nobis, tempore recusandae culpa deleniti dignissimos laborum perspiciatis exercitationem obcaecati dolores unde eveniet eius debitis perferendis provident porro. Ipsum, placeat.</p>
 
+    <!-- If anyone is looking into this, I saved the videos locally into a dif directory, so the links wont work -->
+    <video controls>
+        <source src="videos/real-estate.mp4" type="video/mp4">
+        <source src="videos/real-estate.ogv" type="video/ogg">
+        Your browser does not support HTML5 video. <a href="http://browsehappy.com" target="_blank">Please upgrade your brower.</a>
+    </video>
   </body>
 </html>
