added contact form

--- a/contact.html
+++ b/contact.html
@@ -18,6 +18,17 @@
   </iframe>
 
   <!--contact form-->
+  <form action="#" method="post">
+    <label for="fullname">name</label>
+    <input type="text" id="fullname" name="fullname" placeholder="your name" required>
+    <label for="email">email</label>
+    <input type="email" id="email" name="email" placeholder="your email" required>
+    <label for="phone">phone</label>
+    <input type="tel" id="phone" name="phone" placeholder="your phone (optional)">
+    <label for="message">message</label>
+    <textarea id="message" name="message" rows="10">leave comments</textarea>
+    <input type="submit" value="send">
+  </form>
   
 </body>
 </html>
