add contact form to contact page

--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,17 @@
 
   <!-- Contact Form -->
 
-
+<form action="#" method="post">
+  <label for="fullname">Name</label>
+  <input type="text" id="fullname" name="fullname" placeholder="Your name" required></input>
+  <label for="email">Email</label>
+  <input type="email" id="email" name="email" placeholder="Your email" required></input>
+  <label for="phone">Phone</label>
+  <input type="tel" id="phone" name="fullname" placeholder="Your phone number (optional)"></input>
+  <label for="message">Message</label>
+  <textarea id="message" name="message" rows="10"></textarea>
+  <input type="submit" value="SEND">
+</form>
 
 </body>
 </html>
