--- a/new-properties.html
+++ b/new-properties.html
@@ -1,18 +1,18 @@
-<!doctype html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Exceptional Realty Group - Luxury Homes - New Properties</title>
-</head>
-<body>
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>Exceptional Realty Group - Luxury Homes - New Propertiest</title>
+  </head>
+  <body>
 
-  <h1>Exceptional</h1>
-  <h2>Realty Group</h2>
+    <h1>Exceptional</h1>
+    <h2>Realty Group</h2>
 
-  <!-- links -->
-  <a href="index.html">About</a> <a href="new-properties.html">New Properties</a> <a href="real-estate-listings.html">Listings</a> <a href="market-report.html">Market Report</a> <a href="contact.html">Contact</a> <a href="http://hud.gov" target="_blank">H.U.D.</a>
+    <!-- links -->
+    <a href="index.html">About</a> <a href="new-properties.html">New Properties</a> <a href="real-estate-listings.html">Listings</a> <a href="market-report.html">Market Report</a> <a href="#"></a> <a href="contact.html">Contact</a> <a href="http://portal.hud.gov/hudportal/HUD" target="_blank" >H.U.D.</a>
 
-  <h3>New Properties</h3>
-  
-</body>
+    <h3>New Properties</h3>
+
+  </body>
 </html>
