--- a/contact.html
+++ b/contact.html
@@ -17,5 +17,17 @@
   <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d12100.281199346675!2d-73.99206162458708!3d40.69444935564314!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sus!4v1458669828616" width="425" height="350" frameborder="0" style="border:0" allowfullscreen></iframe>
 
   <!-- Contact Form-->
+  <form action="#" method="post">
+    <label for="fullname">Name</label>
+    <input type="text" id="fullname" name="fullname" placeholder="Your Name" required>
+    <label for="email">Email</label>
+    <input type="email" id="email" name="email" placeholder="Email" required>
+    <label for="phone">Phone</label>
+    <input type="tel" id="phone" name="phone" placeholder="Your Phone (optional)">
+    <label for="message">Message</label>
+    <textarea id="message" name="message" rows="10"> </textarea>
+    <input type="submit" value="Send">
+  </form>
+
 </body>
 </html>
