--- a/contact.html
+++ b/contact.html
@@ -13,6 +13,13 @@
   <a href="index.html">About</a> <a href="new-properties.html">New Properties</a> <a href="real-estate-listings.html">Listings</a> <a href="market-report.html">Market Report</a> <a href="contact.html">Contact</a> <a href="http://hud.gov" target="_blank">H.U.D.</a>
 
   <h3>Contact</h3>
-  
+
+  <!-- map -->
+
+  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d24166.808205963152!2d-73.99484690455265!3d40.787289170210364!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c25882fb30bbd5%3A0x5e26248b46dfc46c!2sUpper+West+Side%2C+New+York%2C+NY!5e0!3m2!1sen!2sus!4v1458767363507" width="425" height="350" frameborder="0" style="border:0" allowfullscreen></iframe>
+
+  <!-- contact form -->
+
+
 </body>
 </html>
