added contact form

--- a/contact.html
+++ b/contact.html
@@ -20,6 +20,23 @@
 
   <!-- contact form -->
 
+  <form action="#" method="post">
+    <label for="full_name">Name</label>
+    <input type="text" id="full_name" name="full_name" placeholder="Your name" required>
+
+    <label for="email">Email</label>
+    <input type="email" id="email" name="email" placeholder="Your email" required>
+
+    <label for="phone">Phone</label>
+    <input type="tel" id="phone" name="phone" placeholder="Your phone number (optional)"
+
+    <label for="message">Message</label>
+    <textarea id="message" name="message" rows="10"></textarea>
+
+    <input type="submit" value="SEND">
+
+  </form>
+
 
 </body>
 </html>
