--- a/contact.html
+++ b/contact.html
@@ -14,5 +14,12 @@
 
   <h3>Contact</h3>
   
+  <!-- Map -->
+  
+  <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d7194.350017938608!2d-73.9881071629351!3d40.69926652517272!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sus!4v1458802516913" width="425" height="350" frameborder="0" style="border:0" allowfullscreen></iframe>
+  
+  <!-- Contact Form -->
+  
+  
 </body>
 </html>
