--- a/contact.html
+++ b/contact.html
@@ -14,5 +14,13 @@
 
   <h3>Contact</h3>
   
+  <!-- Map -->
+
+  <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d8350.665765218906!2d-73.99585595567657!3d40.69802590759109!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sus!4v1459023808796" width="425" height="350" frameborder="0" style="border:0" allowfullscreen></iframe>
+  
+  <!-- Contact Form -->
+
+
+
 </body>
 </html>
