--- a/contact.html
+++ b/contact.html
@@ -13,6 +13,31 @@
   <a href="index.html">About</a> <a href="new-properties.html">New Properties</a> <a href="real-estate-listings.html">Listings</a> <a href="market-report.html">Market Report</a> <a href="contact.html">Contact</a> <a href="http://hud.gov" target="_blank">H.U.D.</a>
 
   <h3>Contact</h3>
-  
+
+<!-- MAP -->
+
+<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d6047.545507599436!2d-73.7251094232788!3d40.72301882662027!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sus!4v1459266037969" width="425" height="350" frameborder="0" style="border:0" allowfullscreen></iframe>
+
+<!-- Contact Form -->
+
+
+<br><br><br><br>
+
+<form action="#" method="post">
+  <label for="full_name">Name</label>
+  <input id="full_name" type="text" name="full_name" placeholder="Full Name" required>
+  <br>
+  <label for="email">E-Mail</label>
+  <input type="email" id="email" name="email" placeholder="E-Mail Address" required>
+  <br>
+  <label for="phone">Phone Number</label>
+  <input type="tel" name="phone" id="phone" placeholder="###(optional)">
+  <br>
+  <label for="message">Message</label>
+  <textarea name="message" id="message" rows="8" cols="40"></textarea>
+  <br>
+  <input type="submit" value="submit">
+</form>
+
 </body>
 </html>
