--- a/contact.html
+++ b/contact.html
@@ -20,6 +20,16 @@
 
   <!-- Contact Form --> 
 
+<form action="#" method="post">
+	<label for="fullname">Name</label>
+	<input type="text" id="fullname" name="fullname" placeholder=" your name" required></input>
+	<label for="email">Email</label>
+	<input type="email" id="email" name="email" placeholder="your email" required>
+	<label for="phone">Phone</label>
+	<input type="tel" id="phone" name="phone" placeholder="your phone (optional)">
+	<label for="message">Message</label>
+	<textarea id="message" name="message" rows="10" placeholder="Ayo chikkity check yorself befo you wreck yoself. Booyakasha!"></textarea>
+	<input type="submit" value="send">
 
 </body>
 </html>
