--- a/index.html
+++ b/index.html
@@ -31,5 +31,14 @@
 
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsa, natus, nobis, tempore recusandae culpa deleniti dignissimos laborum perspiciatis exercitationem obcaecati dolores unde eveniet eius debitis perferendis provident porro. Ipsum, placeat.</p>
 
+    <!-- embed the promo video -->
+
+    <video controls> <!-- this will make it so controls will always show --> 
+        <source src="videos/real-estate.mp4" type="video/mp4">
+        <source src="videos/real-estate.ogv" type="video/ogg">
+        Your browser doesn't support HTML5 video. <a href="http://browsehappy.com" target="_blank"> Please upgrade your browser.
+
+
+
   </body>
 </html>
