--- a/contact.html
+++ b/contact.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -9,10 +9,27 @@
   <h1>Exceptional</h1>
   <h2>Realty Group</h2>
 
-  <!-- links -->
   <a href="index.html">About</a> <a href="new-properties.html">New Properties</a> <a href="real-estate-listings.html">Listings</a> <a href="market-report.html">Market Report</a> <a href="contact.html">Contact</a> <a href="http://hud.gov" target="_blank">H.U.D.</a>
 
   <h3>Contact</h3>
-  
+
+  <!-- Map -->
+
+  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1870.602460043781!2d-149.13581184659756!3d60.96277531079706!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x56c87b4a37349a81%3A0xb1204ac00aef6ccb!2sChair+5+Restaurant!5e0!3m2!1sen!2sus!4v1461399534099" width="425" height="350" frameborder="0" style="border:0" allowfullscreen></iframe>
+
+  <!-- Contact form -->
+
+  <form action="# file on server" method="post">
+    <label for="fullname">Name</label>
+    <input type="text" id="fullname" name="fullname" placeholder="your name" required>
+    <label for="email">Email</label>
+    <input type="email" id="email" name="email" placeholder="your email" required>
+    <label for="phone">Phone</label>
+    <input type="tel" id="phone" name="phone" placeholder="your phone (optional)">
+    <label for="message">Message</label>
+    <textarea id="message" name="message" rows="10"></textarea>
+    <input type="submit" value="send">
+  </form>
+
 </body>
 </html>
