--- a/market-report.html
+++ b/market-report.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -9,37 +9,36 @@
   <h1>Exceptional</h1>
   <h2>Realty Group</h2>
 
-  <!-- links -->
   <a href="index.html">About</a> <a href="new-properties.html">New Properties</a> <a href="real-estate-listings.html">Listings</a> <a href="market-report.html">Market Report</a> <a href="contact.html">Contact</a> <a href="http://hud.gov" target="_blank">H.U.D.</a>
 
   <h3>Market Report</h3>
-
-  <table>
-    <tr>
-      <th>Address</th>
-      <th>City</th>
-      <th>State</th>
-      <th>Sales Price</th>
-    </tr>
-    <tr>
-      <td>2345 Fairview Ln.</td>
-      <td>Brooklyn</td>
-      <td>NY</td>
-      <td>$1.2 mil</td>
-    </tr>
-    <tr>
-      <td>974 Clapton St.</td>
-      <td>Queens</td>
-      <td>NY</td>
-      <td>$998 k</td>
-    </tr>
-    <tr>
-      <td>14A Belmont Way</td>
-      <td>Bronx</td>
-      <td>NY</td>
-      <td>$874 k</td>
-    </tr>
-  </table>
   
+  <table>
+  <tr>
+    <th>Address</th>
+    <th>City</th>
+    <th>State</th>
+    <th>Price</th>
+  </tr>
+  <tr>
+    <td>2345 Fairview Ln.</td>
+    <td>Brooklyn</td>
+    <td>NY</td>
+    <td>$1.2 mil</td>
+  </tr>
+  <tr>
+    <td>565 Toadstool Dr.</td>
+    <td>Girdwood</td>
+    <td>AK</td>
+    <td>$325 K</td>
+  </tr>
+  <tr>
+    <td>110 2nd Ave.</td>
+    <td>Seward</td>
+    <td>AK</td>
+    <td>$205 K</td>
+  </tr>
+  </table>
+
 </body>
 </html>
