--- a/contact.html
+++ b/contact.html
@@ -13,6 +13,25 @@
   <a href="index.html">About</a> <a href="new-properties.html">New Properties</a> <a href="real-estate-listings.html">Listings</a> <a href="market-report.html">Market Report</a> <a href="contact.html">Contact</a> <a href="http://hud.gov" target="_blank">H.U.D.</a>
 
   <h3>Contact</h3>
+
+  <!-- Map -->
+
+<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d12100.30188284677!2d-74.00032282487102!3d40.69433546977475!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c25a47df06b185%3A0xc889234bc07c42ee!2sBrooklyn+Heights%2C+Brooklyn%2C+NY+11201!5e0!3m2!1sen!2sus!4v1461511223915" width="425" height="350" frameborder="0" style="border:0" allowfullscreen></iframe>
+
+  <!-- Contact Form -->
+
+  <form action="#" method="post">
+    <label for ="fullname">Name</label>
+    <input type="text" id="fullname" name="fullname" placeholder="your name" required>
+    <label for="email">Email</label>
+    <input type="email" id="emial" name="email" placeholder="your email" required="">
+    <label for="phone">Phone</label>
+    <input type="tel" id="phone" name="phone" placeholder="your phone (optional)">
+    <label for="message">Message</label>
+    <textarea id="message" name="message" rows="10"></textarea>
+    <input type="submit" value="send">
+
+  </form>
   
 </body>
 </html>
