--- a/contact.html
+++ b/contact.html
@@ -20,5 +20,17 @@
 
   <!-- Contact Form -->
 
+  <form action="#" method="post">
+    <label for='fullname'>Name</label>
+    <input type="text" id='fullname' name="fullname" placeholder='your name' required>
+    <label for="email">Email</label>
+    <input type='email' id='email' name='email' placeholder='your email' required>
+    <label for='phone'>Phone</label>
+    <input type='tel' id='phone' name='phone' placeholder='your phone (optional)'>
+    <lable for="message">Message</lable>
+    <textarea id='message' name='message' rows='10'></textarea>
+    <input type="submit" value="send">
+  </form>
+
 </body>
 </html>
