--- a/contact.html
+++ b/contact.html
@@ -13,6 +13,24 @@
   <a href="index.html">About</a> <a href="new-properties.html">New Properties</a> <a href="real-estate-listings.html">Listings</a> <a href="market-report.html">Market Report</a> <a href="contact.html">Contact</a> <a href="http://hud.gov" target="_blank">H.U.D.</a>
 
   <h3>Contact</h3>
+
+  <!--  EMBEDDED MAP
+  maps.google.com, go to share or embed map, then go to embed map and select the size, this one is 420 by 300 -->
+
+  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d12304294.034059472!2d-85.15720109758264!3d41.15683061059319!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c25900307de965%3A0x8d35ab86686b4aec!2s500+5th+Ave%2C+New+York%2C+NY+10110!5e0!3m2!1ses!2sus!4v1463100777659" width="425" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
+
+
+  <form action="#" method="post">
+    <label>Name</label>
+    <input type="text" id="fullname" name="fullname" placeholder="full name" required></input>
+    <label for="email">Email</label>
+    <input type="email" id="email" name="email" placeholder="your email" required></input>
+    <label for="phone">Phone</label>
+    <input type="tel" id="phone"  name="phone"  placeholder="your phone (optional)"  ></input>
+     <label for="message">Message</label>
+     <textarea id="message" name="message" rows="10"></textarea>
+
+  </form>
   
 </body>
 </html>
