--- a/index.html
+++ b/index.html
@@ -12,14 +12,22 @@
   </head>
   <body>
     <!-- The body is the entire viewable area of the web page. For example we can see text, links, images, and media. -->
+    <header>
 
     <h1>Exceptional</h1>
     <h2>Realty Group</h2>
 
     <!-- links -->
-    <a href="index.html">About</a> <a href="new-properties.html">New Properties</a> <a href="real-estate-listings.html">Listings</a> <a href="market-report.html">Market Report</a> <a href="contact.html">Contact</a> <a href="http://hud.gov" target="_blank">H.U.D.</a>
+        <nav>
+        <a href="index.html">About</a> <a href="new-properties.html">New Properties</a> <a href="real-estate-listings.html">Listings</a> <a href="market-report.html">Market Report</a> <a href="contact.html">Contact</a> <a href="http://hud.gov" target="_blank">H.U.D.</a>
+        </nav>
+    </header>
 
+<section id="featured-property">
+<figure>
     <img src="images/intro-pic.jpg" alt="A beautiful living room." title="Welcome to Exceptional Realty Group">
+    <figcaption>345 carl stret Apt 12 Carrol Rd Ny-Photo by Pedro Perez</figcaption>
+    </figure>
 
     <!--
     foldername/ = go inside the folder.
@@ -30,6 +38,23 @@
     <p>Lorem ipsum dolor sit amet,<br> consectetur adipisicing elit. Quae, perferendis nisi nihil debitis aspernatur doloribus quam eveniet quibusdam tempora esse! Repudiandae, assumenda, debitis doloribus ea eius ab at quae totam. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores, inventore aliquid ipsam debitis nulla vitae omnis nemo quisquam? Obcaecati dolor ipsum distinctio reprehenderit aliquid autem ea vel provident voluptas nisi.</p>
 
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsa, natus, nobis, tempore recusandae culpa deleniti dignissimos laborum perspiciatis exercitationem obcaecati dolores unde eveniet eius debitis perferendis provident porro. Ipsum, placeat.</p>
+    </section>
+
+    <section id="promotional">
+    <figure>
+
+    <!-- Promo video, attribute controls is so that the controls are always visible when page loads -->
+            <video controls>
+                <source src="videos/real-estate.mp4" type="video/mp4">
+                your browser does not supprt HTML5 video <a href="http://browsehappy.com"   target="_blank">Please upgrade your browser</a>
+
+            </video>
+            <figcaption>Exeptional Realty Group,Promotional video. </figcaption>
+        </figure>
+    </section>
+    <footer>
+        &copy; 2016 Exeptional Realty. All right reserved.
+    </footer>
 
   </body>
 </html>
