added HTML5 symantics and figcaptions

--- a/contact.html
+++ b/contact.html
@@ -27,7 +27,7 @@
         <label for="message">Message</label>
         <textarea id="message" name="message" rows="10"></textarea>
          <input type="tel" id="phone"  name="phone"  placeholder="your phone (optional)"  ></input>
-         <input type ="submit" value="send">
+         <input type ="submit" value="">
   </form>
 
 
