--- a/index.html
+++ b/index.html
@@ -11,16 +11,20 @@
     <title>Exceptional Realty Group - Luxury Homes - About</title>
   </head>
   <body>
-    <!-- The body is the entire viewable area of the web page. For example we can see text, links, images, and media. -->
+<header>
+  <h1>Exceptional</h1>
+  <h2>Realty Group</h2>
 
-    <h1>Exceptional</h1>
-    <h2>Realty Group</h2>
+    <nav>
+         <a href="index.html">About</a> <a href="new-properties.html">New Properties</a> <a href="real-estate-listings.html">Listings</a> <a href="market-report.html">Market Report</a> <a href="contact.html">Contact</a> <a href="http://hud.gov" target="_blank">H.U.D.</a>
+    </nav>
+</header>
 
-    <!-- links -->
-    <a href="index.html">About</a> <a href="new-properties.html">New Properties</a> <a href="real-estate-listings.html">Listings</a> <a href="market-report.html">Market Report</a> <a href="contact.html">Contact</a> <a href="http://hud.gov" target="_blank">H.U.D.</a>
-
-    <img src="images/intro-pic.jpg" alt="A beautiful living room." title="Welcome to Exceptional Realty Group">
-
+  <section id="featured-property">
+    <figure>
+      <img src="images/intro-pic.jpg" alt="A beautiful living room." title="Welcome to Exceptional Realty Group">
+      <figcaption> Photo by Denise Richards </figcaption>
+   </figure>
     <!--
     foldername/ = go inside the folder.
     filename = use a file in the current folder.
@@ -28,13 +32,23 @@
     -->
 
     <p>Lorem ipsum dolor sit amet,<br> consectetur adipisicing elit. Quae, perferendis nisi nihil debitis aspernatur doloribus quam eveniet quibusdam tempora esse! Repudiandae, assumenda, debitis doloribus ea eius ab at quae totam. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores, inventore aliquid ipsam debitis nulla vitae omnis nemo quisquam? Obcaecati dolor ipsum distinctio reprehenderit aliquid autem ea vel provident voluptas nisi.</p>
-
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsa, natus, nobis, tempore recusandae culpa deleniti dignissimos laborum perspiciatis exercitationem obcaecati dolores unde eveniet eius debitis perferendis provident porro. Ipsum, placeat.</p>
+  </section>
 <!-- Promo Video -->
-      <video controls>
-        <source src="#" type="video/mp4">
-        <source src="#" type="video/ogg">
-            Your browser does not support HTML 5 Video. Please upgrade your browser <a href="http://browsehappy.com" taget="_blank"> </a> 
-      </video>
+    <section id="promotional">
+        <figure>
+          <video controls>
+            <source src="#" type="video/mp4">
+            <source src="#" type="video/ogg">
+                Your browser does not support HTML 5 Video. Please upgrade your browser <a href="http://browsehappy.com" taget="_blank"> </a>
+          </video>
+          <figcaption> Missing videos due to copy rights ? :) </figcaption>
+        </figure>
+    </section>
+
+    <footer>
+&copy; 2016 Exceptional Realty. All rights reserved
+    </footer>
+
   </body>
 </html>
