--- a/contact.html
+++ b/contact.html
@@ -13,6 +13,8 @@
   <a href="index.html">About</a> <a href="new-properties.html">New Properties</a> <a href="real-estate-listings.html">Listings</a> <a href="market-report.html">Market Report</a> <a href="contact.html">Contact</a> <a href="http://hud.gov" target="_blank">H.U.D.</a>
 
   <h3>Contact</h3>
-  
+
+  <iframe src="https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d12100.195210235173!2d-73.99004287415771!3d40.694922819332625!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sus!4v1463706103169" width="425" height="350" frameborder="0" style="border:0" allowfullscreen></iframe>
+
 </body>
 </html>
