add google map to contact page

--- a/contact.html
+++ b/contact.html
@@ -13,6 +13,15 @@
   <a href="index.html">About</a> <a href="new-properties.html">New Properties</a> <a href="real-estate-listings.html">Listings</a> <a href="market-report.html">Market Report</a> <a href="contact.html">Contact</a> <a href="http://hud.gov" target="_blank">H.U.D.</a>
 
   <h3>Contact</h3>
+
+  <!-- Map -->
+  <iframe width="425" height="300" frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?q=place_id:ChIJhbEG30dawokR7kJ8wEsjicg&key=AIzaSyAmwuz4vveUNO2cOSUSGYofPSKVgCnPzOA" allowfullscreen></iframe>
+
+  <!--Contact Form -->
+  
+
+
+
   
 </body>
 </html>
