add contact from to contact page

--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,22 @@
   <iframe width="425" height="300" frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?q=place_id:ChIJhbEG30dawokR7kJ8wEsjicg&key=AIzaSyAmwuz4vveUNO2cOSUSGYofPSKVgCnPzOA" allowfullscreen></iframe>
 
   <!--Contact Form -->
-  
+  <form action="#" method="post">
+    <label for="fullname">Name</label>
+    <input type="Text" id="fullname" name="fullname" placeholder="your name" required>
+    <label for="email">Email</label>
+    <input type="email" id="email" name="email" placeholder="your email" required>
+    <label for="phone">Phone</label>
+    <input type="tel" id="phone" name="phone" placeholder="your phone" (optional)>
+    <label for="message">Message</label>
+    <textarea id="message" name="message" rows="10"></textarea>
+    <input type="submit" value="send">
+  </form>
+
+
+
+
+  </form>
 
 
 
