--- a/contact.html
+++ b/contact.html
@@ -9,10 +9,33 @@
   <h1>Exceptional</h1>
   <h2>Realty Group</h2>
 
-  <!-- links -->
-  <a href="index.html">About</a> <a href="new-properties.html">New Properties</a> <a href="real-estate-listings.html">Listings</a> <a href="market-report.html">Market Report</a> <a href="contact.html">Contact</a> <a href="http://hud.gov" target="_blank">H.U.D.</a>
+  <!-- links-->
+		<a href="index.html">About</a> <a href="new-properties.html">New Properties</a> <a href="real-estate-listings.html">Real Estate Listings</a> <a href="market-report.html">Market Report</a> <a href="contact.html">Contact</a>  <a href="http://hud.gov" target="_blank">Housing and Urban Development</a>
 
-  <h3>Contact</h3>
-  
+		<h3>Contact</h3>
+
+		<!-- Map-->
+
+		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d6049.662014778615!2d-73.99663220177342!3d40.69971936106267!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c25a47df06b185%3A0xc889234bc07c42ee!2sBrooklyn+Heights%2C+Brooklyn%2C+NY+11201!5e0!3m2!1sen!2sus!4v1464915300235" width="425" height="350" frameborder="0" style="border:0" allowfullscreen></iframe>
+
+
+		<!--Contact form-->
+
+		<form action="#" method="post">
+			<label for="full-name">Name</label>
+				<input id="full-name" type="text" name="full-name" placeholder="Your Name" required>
+
+			<label for="email">Email</label>
+				<input type="email" name="email" id="email" placeholder="Your Email" required>
+
+			<label for="phone">Phone</label>
+				<input type="tel" name="phone" id="phone" placeholder="Phone Number" {optional}>
+			<br>
+			<label for="message">Message</label>
+				<textarea id="message" name="message" rows="4"></textarea>
+			<input type="submit" value="send">
+
+
+		</form>
 </body>
 </html>
