--- a/contact.html
+++ b/contact.html
@@ -13,6 +13,22 @@
   <a href="index.html">About</a> <a href="new-properties.html">New Properties</a> <a href="real-estate-listings.html">Listings</a> <a href="market-report.html">Market Report</a> <a href="contact.html">Contact</a> <a href="http://hud.gov" target="_blank">H.U.D.</a>
 
   <h3>Contact</h3>
-  
+
+  <!-- Map -->
+  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d12064.037381977854!2d-73.91769276316256!3d40.893609889482825!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c2f3b7724fc755%3A0xae59c5b9e1bc40d2!2sRiverdale%2C+Bronx%2C+NY!5e0!3m2!1sen!2sus!4v1465475281015" width="425" height="350" frameborder="0" style="border:0" allowfullscreen></iframe>
+
+  <!-- Contact Form -->
+  <form action="#" method="post">
+    <label for="fullname">Name</label>
+    <input type="text" id="fullname" name="fullname" placeholder="Your name" required>
+    <label for="email">Email</label>
+    <input type="email" id="email" name="email" placeholder="Your email" required>
+    <label for="phone">Phone</label>
+    <input type="tel" id="phone" name="phone" placeholder="Your phone (optional)">
+    <label for="message">Message</label>
+    <textarea id="message" name="message" rows="10"></textarea>
+    <input type="submit" value="Submit">
+  </form>
+
 </body>
 </html>
