--- a/contact.html
+++ b/contact.html
@@ -13,6 +13,25 @@
   <a href="index.html">About</a> <a href="new-properties.html">New Properties</a> <a href="real-estate-listings.html">Listings</a> <a href="market-report.html">Market Report</a> <a href="contact.html">Contact</a> <a href="http://hud.gov" target="_blank">H.U.D.</a>
 
   <h3>Contact</h3>
-  
+  <!-- MAP -->
+  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d387145.8661700535!2d-74.25818094486996!3d40.70531107175252!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c24fa5d33f083b%3A0xc80b8f06e177fe62!2sNew+York%2C+NY!5e0!3m2!1sen!2sus!4v1466022787746"
+  width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+
+
+  <!-- Contact form -->
+  <form class="#" action="index.html" method="post">
+    <label for="fullname">Name</label>
+    <input type="text" id= fullname name="fullname" placeholder="your name" required>
+
+    <label for="email">Email</label>
+    <input type="email" id= "email" name="email" placeholder="your email" required>
+
+    <label for="Phone">Phone</label>
+    <input type="tel" id= "Phone" name="Phone" placeholder="Phone Number (optional)">
+
+    <label for="message">Message</label>
+    <textarea id="message" name="message" rows="8" cols="40"></textarea>
+    <input type="submit" name="submit" value="send">
+  </form>
 </body>
 </html>
