--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <!-- This is a comment. I can see it in the code, but it will not appear in the browser. -->
 
-    <!-- 
+    <!--
     The head section contains info for search engines and the browser and is not seen by site visitors.
     -->
 
@@ -11,7 +11,9 @@
     <title>Exceptional Realty Group - Luxury Homes - About</title>
   </head>
   <body>
-    <!-- The body is the entire viewable area of the web page. For example we can see text, links, images, and media. -->
+    <video src="http://ironboard-curriculum-content.s3.amazonaws.com/front-end/lab-assets/real-estate.mp4" autoplay poster="posterimage.jpg">
+
+    </video>
 
     <h1>Exceptional</h1>
     <h2>Realty Group</h2>
