--- a/contact.html
+++ b/contact.html
@@ -13,6 +13,10 @@
   <a href="index.html">About</a> <a href="new-properties.html">New Properties</a> <a href="real-estate-listings.html">Listings</a> <a href="market-report.html">Market Report</a> <a href="contact.html">Contact</a> <a href="http://hud.gov" target="_blank">H.U.D.</a>
 
   <h3>Contact</h3>
-  
+
+  <!-- map -->
+  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3988.8216414207586!2d36.814164314753896!3d-1.2807009990658949!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x182f172d32561dcb%3A0x193d4e2017527761!2sUniversity+of+Nairobi!5e0!3m2!1sen!2ske!4v1466701231333" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+  <!-- contact form -->
+
 </body>
 </html>
