--- a/contact.html
+++ b/contact.html
@@ -13,6 +13,25 @@
   <a href="index.html">About</a> <a href="new-properties.html">New Properties</a> <a href="real-estate-listings.html">Listings</a> <a href="market-report.html">Market Report</a> <a href="contact.html">Contact</a> <a href="http://hud.gov" target="_blank">H.U.D.</a>
 
   <h3>Contact</h3>
-  
+    
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d225466.55081107092!2d-82.59428406746702!3d27.99650123728983!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88c2b782b3b9d1e1%3A0xa75f1389af96b463!2sTampa%2C+FL!5e0!3m2!1sen!2sus!4v1467481606585" width="425" height="350" frameborder="0" style="border:0" allowfullscreen></iframe>
+    <!-- Map -->
+
+
+      <form action="#" method="post">
+        <label for="fullname" >Name</label>
+        <input type="text" name="fullname" id="fullname" placeholder="your name" required>
+        <label for="eml" >Email</label>
+        <input type="email" name="email" id="eml" placeholder="your email" 
+        required>
+        <label for="phone">Phone</label>
+        <input type="tel" name="Phone" id="phone" placeholder="your phone (optional)">
+        <label for="message">Message</label>
+        <textarea name="message" id="message" rows="10"></textarea>
+        <input type="submit" value="send">
+      </form>
+    <!-- contact form -->
+
+
 </body>
 </html>
