--- a/contact.html
+++ b/contact.html
@@ -1,18 +1,33 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Exceptional Realty Group - Luxury Homes - Contact</title>
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8">
+    <title>Exceptional Realty Group - Luxury Homes - Contact</title>
+  </head>
+  <body>
 
-  <h1>Exceptional</h1>
-  <h2>Realty Group</h2>
+    <h1>Exceptional</h1>
+    <h2>Realty Group</h2>
 
-  <!-- links -->
-  <a href="index.html">About</a> <a href="new-properties.html">New Properties</a> <a href="real-estate-listings.html">Listings</a> <a href="market-report.html">Market Report</a> <a href="contact.html">Contact</a> <a href="http://hud.gov" target="_blank">H.U.D.</a>
 
-  <h3>Contact</h3>
-  
+<!-- links -->
+    <a href="index.html">About</a> <a href="new-properties.html">New Properties</a> <a href="real-estate-listings.html">Listings</a> <a href="market-report.html">Market Report</a> <a href="contact.html">Contact</a> <a href="http://hud.gov" target="_blank">H.U.D.</a>
+
+<h3>Contact</h3>
+
+<!-- Map -->
+<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d6208.682573926281!2d-77.02301749999998!3d38.91617620000001!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89b7c81e5c6ee1c1%3A0x569ff524d936e0a4!2sColumbia+Heights%2C+Washington%2C+DC!5e0!3m2!1sen!2sus!4v1467996458927" width="800" height="400" frameborder="0" style="border:0" allowfullscreen></iframe>
+<!-- Contacts Form -->
+<form action="#" method="post">
+    <lable for="fullname">Name</lable>
+    <input type="text" id="fullname" name="fullname" placeholder="your name" required>
+    <lable for="email">Email</lable>
+    <input type="email" id="email" name="email" placeholder="your email" required>
+    <lable for="phone">Phone</lable>
+    <input type="tel" id="phone" name="phone" placeholder="your phone (optional)">
+    <lable for="message">Message</lable>
+    <textarea id="message" name="message" rows="10"></textarea>
+    <input type="submit" value="send">
+</form>
 </body>
 </html>
