--- a/contact.html
+++ b/contact.html
@@ -19,7 +19,20 @@
 59ad15ca5a9f%3A0x538c5a4e3cd4f365!2s320+W+38th+St%2C+New+York%2C+NY+10018!5e0!3m2!1ses-419!2sus!4
 v1468337025813" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
   <!--contact form-->
+<form action="#" method="post">
+  <label for="Nombre">Nombre</label>
+  <input type="text" id="Nombre"name="Nombre" placeholder="Tu Nombre" required>
+  <label for="email">Email</label>
+  <input type="email" id="email" name="email" placeholder="Tu E-mail" required>
+  <label for="phone">Telefono</label>
+  <input type="tel" id="phone"name="phone" placeholder="Tu Telefono (Opcional)">
+  <label for="message">Mensaje</label>
+  <textarea id="messge" name="message" rows="8" cols="40"></textarea>
+  <input type="submit"  value="send">
 
+</form>
+
+</form>
 
 </body>
 </html>
