add google map to contact page

--- a/contact.html
+++ b/contact.html
@@ -1,4 +1,4 @@
-<!doctype html>
+ <!doctype html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -14,5 +14,11 @@
 
   <h3>Contact</h3>
   
+  <!-- Map -->
+    <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d12099.97981428252!2d-73.99931431019706!3d40.69610878861883!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sus!4v1468441861540" width="425" height="350" frameborder="0" style="border:0" allowfullscreen></iframe>
+
+  <!-- Contact Form -->
+
+
 </body>
 </html>
