--- a/contact.html
+++ b/contact.html
@@ -13,6 +13,20 @@
   <a href="index.html">About</a> <a href="new-properties.html">New Properties</a> <a href="real-estate-listings.html">Listings</a> <a href="market-report.html">Market Report</a> <a href="contact.html">Contact</a> <a href="http://hud.gov" target="_blank">H.U.D.</a>
 
   <h3>Contact</h3>
-  
+
+  <form action="#" method="post">
+    <label for="fullname">Name</label>
+    <input type="text" id="fullname" name="fullname" required>
+
+    <label for="email">Name</label>
+    <input type="email" id="email" name="email" placeholder="youremail"required>
+
+  </form>
+
+  <!-- Map -->
+  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d756.2021383065379!2d-73.90560471456813!3d40.700213846542425!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x228a7a08ea2ea663!2sTorrid!5e0!3m2!1sen!2sae!4v1468544957501" width="320" height="320" frameborder="0" style="border:0" allowfullscreen></iframe>
+
+  <!-- Contact Form -->
+
 </body>
 </html>
